# spring-2026-lab03-xinzhouli00

./: .gitignore  pyproject.toml
part1_claude_code/output/: evaluation_metrics.json  full_report.md  per_class_metrics.json  tuning_results.json
part1_claude_code/src/: 01_eda.py  02_feature_engineering.py  03_xgboost_model.py  04_generate_report.py  utils.py
part2_antigravity/output/: evaluation_metrics.json  full_report.md  tuning_results.json
part2_antigravity/src/: 01_eda.py  02_feature_engineering.py  03_xgboost_model.py  04_generate_report.py
