[project]
name = "ai-assisted-coding"
version = "0.1.0"
description = "Lab: AI-Assisted Coding with Claude Code and Google Antigravity"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
    "pyarrow>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
